# ADA-Slope-Compliance-Tool

./: .gitignore  .pre-commit-config.yaml  CLEANUP_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  REAL_DATA_TESTING.md  SIMPLER_SOLUTIONS.md  TEST_RESULTS_SUMMARY.md  app.py  get_additional_data.py  integration_preview.py  processing_utils.py  pyproject.toml  real_data_guide.py  requirements.txt  show_real_data.py  test_app_functionality.py  test_backend_functionality.py
.github/workflows/: build-and-push-ecr.yml  lint-test.yml  python-ci.yml  terraform-plan.yml
ada_slope/: __init__.py  config.py  core.py  io.py
backend/: Dockerfile  requirements.txt
backend/app/: main.py  processing.py
data/: README.md  test_paths_utm.geojson
data/processed/: fsu_paths_cleaned.geojson  fsu_paths_resampled_points.geojson  fsu_points_with_elevation.geojson  fsu_slope_segments.geojson
data/raw/: fsu_paths.geojson
data/test/: test_paths.geojson
docs/: architecture.mmd  audit.md  deployment-guide.md  implementation-complete.md  mathematical-foundations.md  plan.md
frontend/: index.html
infra/: main.tf  outputs.tf  variables.tf
legacy/: README.md  app.py
legacy/ada_slope/: core.py  io.py
legacy/backend/: Dockerfile  requirements.txt
legacy/backend/app/: main.py  processing.py
legacy/docs/: architecture-diagram.html  architecture.mmd  audit.md  deployment-plan.md
legacy/infra/: main.tf  outputs.tf  variables.tf
legacy/tests/: conftest.py  test_api.py  test_processing.py
outputs/: fsu_slope_summary.md
outputs/summaries/: slope_summary.json
scripts/: add_gitkeep.py  check_elevation.py  check_paths.py  checkfiles.py  compute_slope.py  deploy.ps1  deploy.sh  dev_check.py  eval_ada.py  fetch_demo_data.py  fetch_paths.py  math_demo.py  resample_paths.py  sample_elevation.py  summarize_slope_data.py  visualize_paths.py  visualize_paths_and_points.py
tests/: conftest.py  test_api.py  test_processing.py  test_processing_utils.py
ui/: README.md  app.js  index.html  requirements.txt  server.py  start.py
web/: index.html
